fix infobox z-index

--- a/static/infobox/infobox.css
+++ b/static/infobox/infobox.css
@@ -14,7 +14,7 @@
   text-align: center;
   align-items: center;
 
-  z-index: 100;
+  z-index: 1000;
 
   font-size : 1.5vh;
   color: #000000;  
